exports[`test the site dangerzone matches the snapshot 1`] = `
<div
  className="dnTGWH">
  <div
    className="cxrbkq">
    <button
      aria-expanded={true}
      className="gvecqt"
      onClick={[Function]}>
      <span>
        Disconnect this site
      </span>
      <svg
        fill="#555"
        height={40}
        viewBox="0 0 24 24"
        width={40}>
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z" />
      </svg>
    </button>
    <div
      className="chGuAF">
      <p>
        This will revoke the licenses of the active plugins listed above and remove the site from your my.yoast account. This will NOT delete your actual website or the plugins themselves. You can always re-add the plugins later.
      </p>
      <button
        className="ecqRgL"
        onClick={[Function]}
        type="button">
        Remove
      </button>
    </div>
  </div>
</div>
`;

exports[`test the site dangerzone onRemove handling 1`] = `
<div
  className="dnTGWH">
  <div
    className="cxrbkq">
    <button
      aria-expanded={true}
      className="gvecqt"
      onClick={[Function]}>
      <span>
        Disconnect this site
      </span>
      <svg
        fill="#555"
        height={40}
        viewBox="0 0 24 24"
        width={40}>
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z" />
      </svg>
    </button>
    <div
      className="chGuAF">
      <p>
        This will revoke the licenses of the active plugins listed above and remove the site from your my.yoast account. This will NOT delete your actual website or the plugins themselves. You can always re-add the plugins later.
      </p>
      <button
        className="ecqRgL"
        onClick={[Function]}
        type="button">
        Remove
      </button>
    </div>
  </div>
</div>
`;

exports[`test the site dangerzone onRemove handling 2`] = `
<div
  className="dnTGWH">
  <div
    className="cxrbkq">
    <button
      aria-expanded={true}
      className="gvecqt"
      onClick={[Function]}>
      <span>
        Disconnect this site
      </span>
      <svg
        fill="#555"
        height={40}
        viewBox="0 0 24 24"
        width={40}>
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z" />
      </svg>
    </button>
    <div
      className="chGuAF">
      <p>
        This will revoke the licenses of the active plugins listed above and remove the site from your my.yoast account. This will NOT delete your actual website or the plugins themselves. You can always re-add the plugins later.
      </p>
      <button
        className="ecqRgL"
        onClick={[Function]}
        type="button">
        Remove
      </button>
    </div>
  </div>
</div>
`;

exports[`test the site dangerzone with removing = true matches the snapshot 1`] = `
<div
  className="dnTGWH">
  <div
    className="cxrbkq">
    <button
      aria-expanded={true}
      className="gvecqt"
      onClick={[Function]}>
      <span>
        Disconnect this site
      </span>
      <svg
        fill="#555"
        height={40}
        viewBox="0 0 24 24"
        width={40}>
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z" />
      </svg>
    </button>
    <div
      className="chGuAF">
      <p>
        This will revoke the licenses of the active plugins listed above and remove the site from your my.yoast account. This will NOT delete your actual website or the plugins themselves. You can always re-add the plugins later.
      </p>
      <button
        className="ecqRgL"
        disabled={Object {}}
        onClick={[Function]}
        type="button">
        Removing site...
      </button>
    </div>
  </div>
</div>
`;
